--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,14 @@
     height: 4.5rem;
     font-size: 25px;
 }
+
+@media (max-width: 1250px) {
+    body {
+      background-color: red;
+    }
+ }
+ 
+
+#welcome-section {
+    height: 100%;
+}
