--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,11 @@
-.navbar{
-    height: 4.5rem;
-    font-size: 25px;
-}
-
-@media (max-width: 1250px) {
-    body {
-      background-color: red;
-    }
- }
- 
-
-#welcome-section {
-    height: 100%;
-}
+#navbar {
+    position: fixed;
+    top: 0;
+  }
+  
+  @media (max-width: 1250px) {
+      body {
+        background-color: red;
+      }
+   }
+   
